fix: fix font and mobile_visible style

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -161,6 +161,8 @@
    &--mobile
     &_hidden
      display: none
+    &_visible
+     display: flex
      
 
 
