--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -32,6 +32,10 @@
   background-color: $primary
   border: none
   cursor: pointer
+ &--mobile
+  &_visible
+   display: none
+
 
 .user
  display: flex
